Fix highlighted channel alignment in comment reply

--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -283,6 +283,10 @@ $thumbnailWidthSmall: 2rem;
     }
   }
 
+  .comment__author--creator {
+    margin-top: 0;
+  }
+
   .comment__badge svg {
     height: 1.4rem;
     width: 1.4rem;
